# AFML

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  WORKFLOW.md  afml-workflow.skill  afml_polars_pipeline.py  backtest_results.csv  backtest_split_results.csv  backtest_wf_results.csv  benchmark_polars_vs_pandas.py  best_hyperparameters.csv  best_hyperparameters_lgbm.csv  best_hyperparameters_lgbm_pca.csv  check_auc.py  check_returns.py  check_stats.py  compare_sharpe.py  debug_auc.py  feature_importance.csv  feature_importance_lgbm_pca.csv  feature_importance_lgbm_v2.csv  feature_importance_mda.csv  feature_importance_mdi.csv  feature_importance_optimized.csv  features_pca.csv  generate_sample_data.py  hyperparameter_results.json  main.py  pyproject.toml  requirements.txt  run_webapp.py  selected_features.csv  setup.py  skills-lock.json  temp_instructions.json  test_cpcv.py  train_output.txt  (+4 more)
.agent/rules/: thinking.md
.agent/skills/: autogen-development  polars
.agents/skills/: afml
.cpcv_backup/: backtest_performance.py  bet_sizing_pipeline.py  meta_model_training.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  doctest.yml
afmlkit/bar/: base.py  data_model.py  io.py  kit.py  logic.py
afmlkit/feature/: base.py  kit.py  transforms.py  utils.py
afmlkit/importance/: clustering.py  mda.py
afmlkit/label/: __init__.py  bet_size.py  kit.py  tbm.py
afmlkit/sampling/: __init__.py  filters.py  sequential_bootstrap.py
afmlkit/validation/: __init__.py  cpcv.py  pbo.py  psi.py  purged_cv.py  walk_forward.py
config/: processor_defaults.yaml
data/output/: dollar_bars_labeled.csv  dynamic_dollar_bars.csv  hyperparameter_results.json  labeled_events.csv  model_summary.txt
docs/: README.md
docs/plans/: 2026-02-28-bet-sizing-design.md  2026-02-28-meta-model-design.md  2026-03-11-clustered-mda-webui-design.md  2026-03-11-clustered-mda-webui-implementation.md  2026-03-11-csv-dollar-bar-design.md  2026-03-11-csv-dollar-bar-implementation.md  2026-03-11-cusum-alignment-fix.md  2026-03-11-qlib-alpha158-ffd-design.md  2026-03-11-qlib-alpha158-ffd-implementation.md  2026-03-11-webui-feature-engineering-replacement.md  2026-03-25-trend-scan-redesign.md  (+4 more)
docs/source/: conf.py
examples/: Performance_Pandas_Polars_FinMLKit.ipynb  afml_polars_pipeline.py  autogen_afml_workflow.py
notebooks/: MVP_AFML_Validation.ipynb
outputs/: feature_importance.csv
research/: README.md
scripts/: 01_data_ingestion.py  02_bar_evaluation.py  03_feature_engineering.py  04_sampling_and_labeling.py  05_feature_importance_analysis.py  06_primary_model_training.py  07_meta_model_training.py  08_bet_sizing_pipeline.py  09_backtest_performance.py  10_run_visualizations.py  README.md  __init__.py  autogen_afml_workflow.py  backtest_performance.py  bet_sizing_pipeline.py  binance2h5.py  cusum_filtering.py  dynamic_dollar_bars_run.py  evaluate_dollar_bars.py  feature_engineering.py  feature_importance_analysis.py  meta_model_training.py  runner_visuals.py  tbm_labeling.py  util_plotting_lib.py
src/: afml_polars_pipeline.py  backtest.py  backtest_statistics.py  backtest_walk_forward.py  backtest_wf_raw.py  bet_sizing.py  binance_downloader.py  check_data_continuity.py  compare_models.py  cv_setup.py  explain_pca.py  feature_engineering_v2.py  feature_importance.py  feature_pca.py  features.py  hyperparameter_optimization.py  labeling.py  merge_aggtrades.py  meta_labeling.py  microstructure_features.py  position_sizing.py  process_bars.py  rule_based_strategies.py  sample_weights.py  signal_features.py  train_hybrid_model.py  train_lgbm_pca.py  train_lgbm_v2.py  train_model.py  train_primary.py  visualize_labels.py  visualize_weights.py
tests/: README.md  conftest.py  reproduce_issue.py  test_bet_sizing.py  test_cusum_dual_viz.py  test_dollar_bars.py  test_dynamic_chunked.py  test_features.py  test_frac_diff_corr.py  test_jb_statistics.py  test_meta_labeling.py  test_polars_pipeline.py  test_sample_weights.py  test_triple_barrier.py
webapp/: FEATURE_ENGINEERING_GUIDE.md  README.md  __main__.py  app.py  config.py  session.py
(+787 files in other folders)
