[build-system]
requires = ["setuptools>=75.0", "wheel>=0.43", "build>=1.2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "finmlkit"
dynamic = ["version", "readme"]
description = "Financial ML toolkit"
authors = [
    {name = "Dániel Terbe", email = "dainel@terbe.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=2.2.0",
    "scipy>=1.10.0,<2.0",
    "numba~=0.61.0",
    "pandas~=2.2.0",
    "python-dotenv~=1.0.1",
    "pympler~=1.1",
    "tables~=3.10.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "flake8",
    "black",
]

[project.urls]
Homepage = "https://github.com/quantscious/finmlkit"
Documentation = "https://finmlkit.readthedocs.io"
Repository = "https://github.com/quantscious/finmlkit"

[tool.setuptools]
packages = ["finmlkit"]

[tool.setuptools.dynamic]
version = {attr = "finmlkit._version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}