[build-system]
requires = ["setuptools>=75.0", "wheel>=0.43", "build>=1.2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "afmlkit"
dynamic = ["version", "readme"]
description = "Financial ML toolkit"
authors = [
    {name = "Dániel Terbe", email = "dainel@terbe.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=2.2.0",
    "scipy>=1.10.0,<2.0",
    "numba~=0.61.0",
    "pandas~=2.2.0",
    "python-dotenv~=1.0.1",
    "pympler~=1.1",
    "tables~=3.10.0",
    "tqdm",
    "matplotlib>=3.10.8",
    "statsmodels>=0.14.6",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "pyyaml>=6.0.3",
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext>=0.7.5",
    "openai>=2.30.0",
    "tiktoken>=0.12.0",
    "tsfresh~=0.20.0",
    "lightgbm>=4.6.0",
    "openpyxl>=3.1.5",
    "shap>=0.49.1",
    "pyarrow>=23.0.1",
    "vectorbt>=0.28.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "flake8",
    "black",
]

[project.urls]
Homepage = "https://github.com/quantscious/afmlkit"
Documentation = "https://afmlkit.readthedocs.io"
Repository = "https://github.com/quantscious/afmlkit"

[tool.setuptools]
packages = ["afmlkit"]

[tool.setuptools.dynamic]
version = {attr = "afmlkit._version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
]
